# ai-stock-recommender

./: .gitignore  CLAUDE.md  README.md  ai_analyst.py  chart_builder.py  constants.py  daily_picks.py  indicators.py  portfolio.json  portfolio_manager.py  pyproject.toml  requirements.txt  run_analyser.sh  stock_analyser.py
.claude/: CLAUDE.md  settings.json
.claude/commands/: add-feature.md
.devcontainer/: devcontainer.json
.github/workflows/: daily_picks.yml
.streamlit/: config.toml  secrets.toml.example
docs/: _config.yml  index.md
