# ─────────────────────────────────────────────────────────────────
# pyproject.toml — AI Stock Investment Recommender
# Works with:  uv (local dev)  ·  pip  ·  Poetry (Streamlit Cloud)
# ─────────────────────────────────────────────────────────────────

[project]
name            = "ai-stock-recommender"
version         = "2.0.0"
description     = "Real-time AI stock investment recommender with BUY/HOLD/SELL signals in EUR"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
    "pillow>=9.0.0",
]

# ── uv (local dev) ────────────────────────────────────────────────
[tool.uv]
package = false          # don't try to install this directory as a package

# ── Poetry (Streamlit Cloud) ──────────────────────────────────────
[tool.poetry]
package-mode = false     # don't try to install this directory as a package

# ── No build system needed — this is a script, not a library ──────
# (removing [build-system] prevents Poetry/pip from trying to build
#  a wheel and failing because there is no src/ or package dir)
